# fluidity-old

./: .gitignore  CMakeLists.txt  LICENSE  README.md
libs/cuda-simulation/src/: particleSystem.cpp  particleSystem.h  particleSystem_cuda.cu
shaders/: bilateral_filter.frag  sphere_rendering.frag  sphere_rendering.vert  surface_rendering.frag  surface_rendering.vert  texture_rendering.frag  texture_rendering.vert
src/: main.cpp
src/renderer/: fluid_renderer.cpp  fluid_renderer.h  fluid_surfaces.cpp  fluid_surfaces.h  fluid_surfaces_renderer.cpp  fluid_surfaces_renderer.h  renderer.h  shader.cpp  shader.h  surface_smoothing_pass.cpp  surface_smoothing_pass.h  texture_renderer.cpp  texture_renderer.h  window.cpp  window.h
src/simulation/: particle_system_wrapper.cpp  particle_system_wrapper.h
src/utils/: export_directives.h  glcall.h  logger.h
